--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+    <header>
+      <figure>
+          <img src="assets/images/football.png" alt="Logo" />
+          <figcaption>DW</figcaption>
+      </figure>
+    </header>
   <app-root></app-root>
 </body>
 </html>
