--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <script src="node_modules/chart.js/src/chart.js"></script>
 
   <meta charset="utf-8">
-  <title>Dw</title>
+  <title>DW - Creation Zone</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
